[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Monster2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Monster02.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MonsterHealth.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 17.9179

[node name="Monster2" type="Area2D"]
collision_layer = 32
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MonsterHealth" parent="." instance=ExtResource( 3 )]
margin_left = -16.1786
margin_top = -30.0
margin_right = -6.17862
margin_bottom = -30.0

[node name="Timer" type="Timer" parent="."]
[connection signal="area_shape_entered" from="." to="." method="_on_Monster1_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Monster1_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
